<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="recipe"
            type="com.zongmin.cook.data.Recipe" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".edit.EditRecipesFragment">

            <Button
                android:id="@+id/button_edit_upload"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_baseline_cloud_upload_24"
                app:layout_constraintBottom_toBottomOf="@+id/image_edit_main"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_edit_camera"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_baseline_add_a_photo_24"
                app:layout_constraintStart_toEndOf="@+id/button_edit_upload"
                app:layout_constraintTop_toTopOf="@+id/button_edit_upload" />

            <ImageView
                android:id="@+id/image_edit_main"
                imageUrl="@{recipe.mainImage}"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/editimg"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/recipe_image" />

            <ImageView
                android:id="@+id/image_edit_back"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/back_button"
                android:elevation="5dp"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_edit_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/edit_delete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_edit_main" />


            <TextView
                android:id="@+id/text_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/edit_name_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_edit_main" />

            <EditText
                android:id="@+id/edittext_edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:hint="@string/edit_name_hint"
                android:inputType="text"
                android:singleLine="true"
                android:text="@{recipe.name}"
                android:textSize="14sp"
                android:theme="@style/editTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_edit_name"
                app:layout_constraintTop_toBottomOf="@+id/text_edit_name"
                android:autofillHints="no" />

            <TextView
                android:id="@+id/text_edit_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_category"
                app:layout_constraintStart_toStartOf="@+id/edittext_edit_name"
                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_name" />

            <Spinner
                android:id="@+id/spinner_edit_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerValue"
                app:layout_constraintStart_toStartOf="@+id/text_edit_category"
                app:layout_constraintTop_toBottomOf="@+id/text_edit_category" />

            <TextView
                android:id="@+id/text_ingredient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_ingredient_title"
                app:layout_constraintStart_toStartOf="@+id/spinner_edit_category"
                app:layout_constraintTop_toBottomOf="@+id/spinner_edit_category" />

            <EditText
                android:id="@+id/edittext_serving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/edit_serving_hint"
                android:inputType="number"
                android:maxLength="5"
                android:text="@{recipe.serving == 0 ? null : Integer.toString(recipe.serving) }"
                android:textSize="14sp"
                android:theme="@style/editTextTheme"
                app:layout_constraintBottom_toBottomOf="@+id/text_serving"
                app:layout_constraintEnd_toStartOf="@+id/text_serving"
                app:layout_constraintTop_toTopOf="@+id/text_serving"
                android:autofillHints="no" />

            <TextView
                android:id="@+id/text_serving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/edit_serving"
                app:layout_constraintBottom_toBottomOf="@+id/text_ingredient_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_edit_category" />

            <LinearLayout
                android:id="@+id/edit_ingredient_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_ingredient_title">
                <include layout="@layout/item_edit_ingredient" />
            </LinearLayout>

            <Button
                android:id="@+id/button_new_ingredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/edit_new_ingredient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_ingredient_list" />

            <TextView
                android:id="@+id/text_edit_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/edit_step_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_new_ingredient" />

            <TextView
                android:id="@+id/text_edit_cook_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/edit_cook_time_title"
                app:layout_constraintBottom_toBottomOf="@+id/text_edit_step"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_edit_step" />

            <EditText
                android:id="@+id/edittext_edit_cook_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/edit_cook_time"
                android:inputType="number"
                android:text="@{recipe.cookingTime}"
                android:textSize="14sp"
                android:theme="@style/editTextTheme"
                app:layout_constraintBottom_toBottomOf="@+id/text_edit_cook_time_title"
                app:layout_constraintEnd_toStartOf="@+id/text_edit_cook_time_title"
                app:layout_constraintTop_toTopOf="@+id/text_edit_cook_time_title"
                android:autofillHints="no" />

            <LinearLayout
                android:id="@+id/edit_step_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_edit_step">

            </LinearLayout>

            <Button
                android:id="@+id/button_new_step"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="新增步驟"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_step_list" />

            <TextView
                android:id="@+id/text_edit_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Tag"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_new_step" />

            <Button
                android:id="@+id/button_new_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="新增Tag"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_edit_tag" />

            <TextView
                android:id="@+id/text_edit_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="備註"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_new_tag" />

            <EditText
                android:id="@+id/edittext_edit_remark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="輸入備註"
                android:text="@{recipe.remark}"
                android:textSize="14dp"
                android:theme="@style/editTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_edit_remark"
                app:layout_constraintTop_toBottomOf="@+id/text_edit_remark" />

            <Button
                android:id="@+id/button_edit_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="儲存"
                app:layout_constraintEnd_toStartOf="@+id/button_edit_cancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_remark" />

            <Button
                android:id="@+id/button_edit_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="取消"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_edit_save"
                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_remark" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>